src/test/deca/context/valid/created/print-var.deca
//Description :
// Test d'un print de variable
//
// Resultats :
// 2


{
    int x = 2;

    print(x);
}
