src/test/deca/context/invalid/created/method_return_type.deca
//Description :
// Test d'un retrun de type inconnu
//
// Resultats :
// Erreur


class Premiere {

    ClassInexistante printX(int x){
    print(x);
    }
}

{

}
